--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
         <h3>
 <a name="welcome-to-tweedia-pages" class="anchor" href="#welcome-to-tweedia-pages"><span class="octicon octicon-link"></span></a>Welcome to Tweedia Pages.</h3>
 
-<p>Tweedia is a kind of GUI-base shell software specialized for analyzing result of a invoked program.
-Tweedia is developed in C++ and uses Qt.
-Tweedia is a free software distributed under GPL.</p>
+<p>Tweedia is a kind of GUI-base shell software specialized for analyzing result of a invoked program.</p>
+
+<ul>
+<li>Operaiton of Tweedia is validated on MacOSX(Snow Leoperd).</li>
+<li>Tweedia is a free software distributed under GPL.</li>
+</ul>
       </section>
     </div>
 
