--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a name="welcome-to-tweedia-pages" class="anchor" href="#welcome-to-tweedia-pages"><span class="octicon octicon-link"></span></a>Welcome to Tweedia Pages.</h3>
 
-<p>Tweedia is a kind of GUI-base shell software specialized for analyzing result of a invoked program.</p>
+<p>Tweedia is a kind of GUI-base shell software specialized for analyzing results of called programs.</p>
 
 <ul>
 <li>Operaiton of Tweedia is validated on MacOSX(Snow Leoperd).</li>
