Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <ul>
 <li>Operaiton of Tweedia is validated on MacOSX(Snow Leoperd).</li>
 <li>Tweedia is a free software distributed under GPL.</li>
-</ul><p><img src="../images/screenshot.png" alt="screenshot"></p>
+</ul><p><img src="./images/screenshot.png" alt="screenshot"></p>
       </section>
     </div>
 
