Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <li>Operaiton of Tweedia is validated on Mac OS X (Snow Leoperd).</li>
 <li>Tweedia is a free software distributed under GPL.</li>
 </ul><p><img src="./images/screenshot.png" alt="screenshot"></p>
+
+<p>Twitter: <a href="https://twitter.com/tweediaproj">@tweediaproj</a></p>
       </section>
     </div>
 
