Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a name="welcome-to-tweedia-site" class="anchor" href="#welcome-to-tweedia-site"><span class="octicon octicon-link"></span></a>Welcome to Tweedia Site.</h3>
 
-<p>Tweedia is a kind of GUI-base shell software specialized for analyzing results of called programs.</p>
+<p>Tweedia is a GUI-base shell software specialized for analyzing results of called programs.</p>
 
 <ul>
 <li>Operaiton of Tweedia is validated on Mac OS X (Snow Leoperd).</li>
