--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/tweedia/Tweedia">View on GitHub</a>
 
-          <h1 id="project_title">Tweedia</h1>
+          <h1 id="project_title"><img id="iconimg" src="./images/icon.png">Tweedia</h1>
 
             <p style="text-align:right;">
             <a href="javascript:void(0);" onclick="changelangall('en');">[English]</a>/
