--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   }
   </script>
 
-  <body onLoad="changelangall('jp');">
+  <body onLoad="changelangall('en');">
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
