--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         <h3 id="download_jp" style="display:none;">ダウンロード</h3>
             <ul>
             <li>
-            <a href="https://github.com/tweedia/Tweedia/releases/download/v0.9.0-beta.1/Tweedia-v0.9.0-beta.1.dmg">
-                <span id="download_mac1_en" style="display:none;">28-Dec-2013 v0.9.0-beta.1 (Pre-release, For MacOSX)</span>
-                <span id="download_mac1_jp" style="display:none;">2013年12月28日 v0.9.0-beta.1 （プレリリース版、MacOSX用）</span>
+            <a href="https://github.com/tweedia/Tweedia/releases/download/v0.9.0/Tweedia-v0.9.0.dmg">
+                <span id="download_mac1_en" style="display:none;">30-Dec-2013 v0.9.0 (For MacOSX)</span>
+                <span id="download_mac1_jp" style="display:none;">2013年12月30日 v0.9.0 （MacOSX用）</span>
             </a>
             </li>
             <li>
