--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <section id="main_content" class="inner">
         <h3 id="welcome_en" style="display:none;">Welcome to Tweedia!</h3>
         <h3 id="welcome_jp" style="display:none;">概要</h3>
-            <p id="welcome_description_en" style="display:none;">Tweedia is a GUI-base shell tool specialized for analyzing results of called programs.</p>
-            <p id="welcome_description_jp" style="display:none;">Tweediaは、実行プログラムの出力内容の分析に特化したGUIベースのシェルツールです。</p>
+            <p id="welcome_description_en" style="display:none;">Tweedia is a GUI-base shell tool specialized for observing results of called programs.</p>
+            <p id="welcome_description_jp" style="display:none;">Tweediaは、プログラム実行結果の観察機能を特徴とするGUIベースのシェルツールです。</p>
 
         <h3 id="screenshot_en" style="display:none;">Screenshot</h3>
         <h3 id="screenshot_jp" style="display:none;">スクリーンショット</h3>
