--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     changelang("download",lang,"block");
     changelang("download_mac1",lang,"inline");
     changelang("download_oldver",lang,"inline");
+    changelang("goal",lang,"block");
+    changelang("goal_description",lang,"inline");
     changelang("note",lang,"block");
     changelang("note_description1",lang,"inline");
     changelang("note_description2",lang,"inline");
@@ -68,7 +70,7 @@
             <p id="welcome_description_en" style="display:none;">Tweedia is a GUI-base shell tool specialized for observing results of called programs.</p>
             <p id="welcome_description_jp" style="display:none;">Tweediaは、プログラム実行結果の観察機能を特徴とするGUIベースのシェルツールです。</p>
 
-        <h3 id="screenshot_en" style="display:none;">Screenshot</h3>
+        <h3 id="screenshot_en" style="display:none;">Screenshot (As-Is)</h3>
         <h3 id="screenshot_jp" style="display:none;">スクリーンショット</h3>
             <p><img src="./images/screenshot.png" alt="screenshot"></p>
 
@@ -101,6 +103,18 @@
             </a>
             </li>
             </ul>
+
+        <h3 id="goal_en" style="display:none;">Goal</h3>
+        <h3 id="goal_jp" style="display:none;">今後の方向性</h3>
+
+            <ul>
+            <li>
+                <span id="goal_description_en" style="display:none;">The goal of Tweedia is the platform on which simulation games like Aquarium game runs.</span>
+                <span id="goal_description_jp" style="display:none;">このソフトの開発目標は、アクアリウムのようなシミュレーションゲームがTweedia上で動作するようにすることです。</span>
+            </li>
+            </ul>
+
+            <p><img src="./images/screenshot_goal.png" alt="screenshot_goal"></p>
 
         <h3 id="note_en" style="display:none;">Note</h3>
         <h3 id="note_jp" style="display:none;">備考</h3>
