--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </li>
             </ul>
 
-            <p><img src="./images/screenshot_goal.png" alt="screenshot_goal"></p>
+            <p><img src="./images/screenshot_goal.png" alt="screenshot_goal" style="border:solid 1px #000000"></p>
 
         <h3 id="note_en" style="display:none;">Note</h3>
         <h3 id="note_jp" style="display:none;">備考</h3>
