--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             <ul>
             <li>
-                <span id="goal_description_en" style="display:none;">The goal of Tweedia is the platform on which simulation games like Aquarium game runs.</span>
+                <span id="goal_description_en" style="display:none;">The goal of Tweedia is a platform on which some simulation games like Aquarium run.</span>
                 <span id="goal_description_jp" style="display:none;">このソフトの開発目標は、アクアリウムのようなシミュレーションゲームがTweedia上で動作するようにすることです。</span>
             </li>
             </ul>
